--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,3 +1,10 @@
+.container_nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
 .conatiner_navbar {
   top: 60px;
   transition: background 300ms ease, color 300ms ease;
@@ -49,7 +56,7 @@
   font-size: 20px;
   top: 5px;
   right: 0;
-  position: absolute;
+  position: fixed;
   padding: 10px;
   transition: background 300ms ease, color 300ms ease;
 }
