--- a/src/components/styles/AboutMe.css
+++ b/src/components/styles/AboutMe.css
@@ -1,7 +1,7 @@
 .container_aboutMe {
-    margin-top: 120px;
+    margin-top: 160px;
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 210px;
 }
 
 .container_data {
@@ -15,4 +15,11 @@
 .container_data h4{
     padding: 5px;
     color: red;
+}
+
+@media  (max-width: 415px) {
+    .container_aboutMe {
+        margin-top: 90px;
+        margin-bottom: 150px;
+    }
 }
