--- a/src/components/styles/Education.css
+++ b/src/components/styles/Education.css
@@ -2,7 +2,8 @@
     margin: 0 auto;
     width: 79%;
     padding: 1px;
-    margin-bottom: 50px;
+    margin-top: 170px;
+    margin-bottom: 200px;
     position: relative;
 }
 
