--- a/src/components/styles/Project.css
+++ b/src/components/styles/Project.css
@@ -28,6 +28,7 @@
 }
 
 .figure img {
+    border-radius: 10px;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -45,6 +46,7 @@
     text-align: center;
     font-size: 20px;
     transform: translateY(-40px);
+    border-radius: 10px;
 }
 
 .capa:hover {
