--- a/src/components/styles/ScrollButton.css
+++ b/src/components/styles/ScrollButton.css
@@ -11,6 +11,7 @@
     border-radius: 50%;
     backdrop-filter: blur(8px);
     background-color: rgba(221, 218, 218, 0.5);
+    z-index: 4;
   }
   
   .scroll-button.visible {
