--- a/src/components/styles/ScrollButton.css
+++ b/src/components/styles/ScrollButton.css
@@ -1,20 +1,21 @@
 .scroll-button {
-    position: fixed;
-    bottom: 100px;
-    left: 4px;
-    opacity: 0;
-    cursor: pointer;
-    font-size: 30px;
-    padding: 5px;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-    border-radius: 50%;
-    backdrop-filter: blur(8px);
-    background-color: rgba(221, 218, 218, 0.5);
-    z-index: 4;
-  }
-  
-  .scroll-button.visible {
-    opacity: 1;
-    visibility: visible;
-  }
+  position: fixed;
+  bottom: 100px;
+  left: 4px;
+  opacity: 0;
+  cursor: pointer;
+  font-size: 30px;
+  padding: 5px;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  border-radius: 50%;
+  backdrop-filter: blur(8px);
+  /* background-color: #8f8ea9; */
+  border: 1px solid #8f8ea9;
+  z-index: 4;
+}
+
+.scroll-button.visible {
+  opacity: 1;
+  visibility: visible;
+}
