update of components

--- a/src/components/styles/AboutMe.css
+++ b/src/components/styles/AboutMe.css
@@ -1,25 +1,30 @@
 .container_aboutMe {
-    margin-top: 160px;
-    text-align: center;
-    margin-bottom: 210px;
+  margin-top: 160px;
+  text-align: center;
+  margin-bottom: 210px;
+}
+
+.container_aboutMe h2,
+h4 {
+  text-transform: uppercase;
 }
 
 .container_data {
-    margin: 0 auto;
-    width: 76%;
-    max-width: 600px;
-    border: 1px solid black;
-    padding: 5px;
+  margin: 0 auto;
+  width: 76%;
+  max-width: 600px;
+  border: 1px solid black;
+  padding: 5px;
 }
 
-.container_data h4{
-    padding: 5px;
-    color: red;
+.container_data h4 {
+  padding: 5px;
+  color: red;
 }
 
-@media  (max-width: 415px) {
-    .container_aboutMe {
-        margin-top: 90px;
-        margin-bottom: 150px;
-    }
+@media (max-width: 415px) {
+  .container_aboutMe {
+    margin-top: 90px;
+    margin-bottom: 150px;
+  }
 }
