--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -1,45 +1,46 @@
 .container_contact {
-    font-size: 50px;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    border: 1px solid black;
-    width: 80%;
-    max-width: 600px;
-    margin: 0 auto;
-    position: relative;
+  font-size: 50px;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  border: 1px solid black;
+  width: 80%;
+  max-width: 600px;
+  margin: 0 auto;
+  position: relative;
 }
 
 .container_contact a {
-    transition: background  300ms ease, color 50ms ease;
+  transition: background 300ms ease, color 50ms ease;
 }
 
 .iconos {
-    margin: 0 auto;
-    margin-top: 8px;
-    transition: 300ms ease-out, color 300ms ease;
-    overflow: hidden;
+  margin: 0 auto;
+  margin-top: 8px;
+  transition: 300ms ease-out, color 300ms ease;
+  overflow: hidden;
 }
 
 .iconos:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
-.containerContact_principal  h2 {
-    display: flex;
-    justify-content: center;
+.containerContact_principal h2 {
+  display: flex;
+  justify-content: center;
+  text-transform: uppercase;
 }
 
 .containerContact_principal {
-    padding-bottom: 300px;
+  padding-bottom: 300px;
 }
 
-@media  (max-width: 415px) {
-    .containerContact_principal {
-        padding: 70px;
-    }
+@media (max-width: 415px) {
+  .containerContact_principal {
+    padding: 70px;
+  }
 }
