--- a/src/components/styles/Project.css
+++ b/src/components/styles/Project.css
@@ -1,94 +1,95 @@
 .container_project {
-    width: 79%;
-    margin: 0 auto;
-    padding: 1px;
-    margin-bottom: 95px;
+  width: 79%;
+  margin: 0 auto;
+  padding: 1px;
+  margin-bottom: 95px;
 }
 
 .container_project h2 {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  text-transform: uppercase;
 }
 
 .contenedor {
-    border: 1px solid white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .figure {
-    position: relative;
-    height: 255px;
-    padding: 5px;
-    max-width: 315px;
-    overflow: hidden;
-    cursor: pointer;
+  position: relative;
+  height: 255px;
+  padding: 5px;
+  max-width: 315px;
+  overflow: hidden;
+  cursor: pointer;
 }
 
 .figure img {
-    border-radius: 10px;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .capa {
-    position: absolute;
-    top: 4px;
-    width: 97%;
-    height: 97%;
-    overflow: hidden;
-    background: rgba(0, 0, 0, 0.7);
-    opacity: 0;
-    transition: all 500ms ease-out;
-    text-align: center;
-    font-size: 20px;
-    transform: translateY(-40px);
-    border-radius: 10px;
+  position: absolute;
+  top: 4px;
+  width: 97%;
+  height: 97%;
+  overflow: hidden;
+  background: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  transition: all 500ms ease-out;
+  text-align: center;
+  font-size: 20px;
+  transform: translateY(-40px);
+  border-radius: 10px;
 }
 
 .capa:hover {
-    transform: translateY(0px);
-    opacity: 1;
+  transform: translateY(0px);
+  opacity: 1;
 }
 
 .div-icoon1 {
-    margin-top: 85px;
+  margin-top: 85px;
 }
 
 .div-icoon2 {
-    margin-top: 38px;
+  margin-top: 38px;
 }
 .div-icoon3 {
-    margin-top: 62px;
+  margin-top: 62px;
 }
 .div-icoon4 {
-    margin-top: 86px;
+  margin-top: 86px;
 }
 .div-icoon5 {
-    margin-top: 86px;
+  margin-top: 86px;
 }
 .div-icoon6 {
-    margin-top: 110px;
+  margin-top: 110px;
 }
 
 .icoon_project {
-    font-size: 40px;
-    padding: 5px;
-    color: white;
+  font-size: 40px;
+  padding: 5px;
+  color: white;
 }
 
 .capa h3 {
-    color: white;
-    width: 100%;
-    background-color: black;
-    padding: 5px;
+  color: white;
+  width: 100%;
+  background-color: black;
+  padding: 5px;
 }
 
 .capa p {
-    color: white;
-    padding: 2px;
-    text-align: left;
+  color: white;
+  padding: 2px;
+  text-align: left;
 }
