--- a/src/components/styles/AboutMe.css
+++ b/src/components/styles/AboutMe.css
@@ -13,7 +13,7 @@ h4 {
   margin: 0 auto;
   width: 76%;
   max-width: 600px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   padding: 5px;
 }
 
