--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -7,7 +7,7 @@
   text-align: center;
   flex-wrap: wrap;
   gap: 20px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width: 80%;
   max-width: 600px;
   margin: 0 auto;
