--- a/src/components/styles/Project.css
+++ b/src/components/styles/Project.css
@@ -12,7 +12,7 @@
 }
 
 .contenedor {
-  border: 1px solid white;
+  /* border: 1px solid white; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -56,7 +56,7 @@
 }
 
 .div-icoon1 {
-  margin-top: 85px;
+  margin-top: 60px;
 }
 
 .div-icoon2 {
@@ -66,13 +66,13 @@
   margin-top: 62px;
 }
 .div-icoon4 {
-  margin-top: 86px;
+  margin-top: 72px;
 }
 .div-icoon5 {
   margin-top: 86px;
 }
 .div-icoon6 {
-  margin-top: 110px;
+  margin-top: 80px;
 }
 
 .icoon_project {
