--- a/src/components/styles/TechSkills.css
+++ b/src/components/styles/TechSkills.css
@@ -14,7 +14,7 @@
 
 .container_tech-div {
   z-index: 2;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   margin-bottom: 50px;
   font-size: 70px;
   display: grid;
@@ -25,7 +25,7 @@
 .div22 {
   gap: 50px;
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   margin: 0 auto;
 }
 .div2222 {
