--- a/src/components/styles/Education.css
+++ b/src/components/styles/Education.css
@@ -1,60 +1,63 @@
 .container_education {
   margin: 0 auto;
-  width: 79%;
-  padding: 1px;
-  margin-top: 170px;
+  width: 80%;
+  padding: 20px;
+  margin-top: 150px;
   margin-bottom: 200px;
-  position: relative;
+  text-align: center;
 }
 
 .container_education h2 {
-  display: flex;
-  justify-content: center;
+  font-size: 28px;
+  font-weight: bold;
   text-transform: uppercase;
+  border-bottom: 3px solid #4a0675;
+  display: inline-block;
+  padding-bottom: 5px;
+  margin-bottom: 20px;
 }
 
 .container_education-div {
-  /* border: 1px solid black; */
-  gap: 10px;
   display: grid;
-  grid-template-columns: 2fr 2fr;
-  /* flex-wrap: wrap; */
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
   justify-content: center;
-  padding: 5px;
-  max-width: 600px;
+  padding: 10px;
+  max-width: 800px;
   margin: 0 auto;
+}
+
+.div_image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  z-index: 1;
 }
 
 .div_image img {
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  width: 320px;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 0.3s ease;
-}
-.div_image {
-  transition: all 0.5s ease;
-}
-.div_image:hover {
-  transform: scale(1.01);
+  width: 100%;
+  max-width: 320px;
+  height: auto;
+  border-radius: 10px; /* Bordes redondeados */
+  object-fit: contain;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-@media (max-width: 663px) {
-  .container_education-div {
-    border: none;
-    display: flex;
-    flex-wrap: wrap;
-  }
+.div_image:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
 }
-@media (max-width: 415px) {
-  .div_image img {
-    width: 300px;
+
+/* Responsividad */
+/* @media (max-width: 600px) {
+  .container_education {
+    width: 100%;
   }
-}
-@media (max-width: 320px) {
+} */
+
+@media (max-width: 400px) {
   .div_image img {
-    width: 260px;
+    max-width: 280px;
   }
 }
