--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .container_navbar {
@@ -116,6 +116,7 @@
   transition: background 300ms ease, color 300ms ease;
   border: 1px solid;
   border-radius: 5px;
+  backdrop-filter: blur(8px);
 }
 
 .iconX {
