--- a/src/components/styles/Project.css
+++ b/src/components/styles/Project.css
@@ -2,17 +2,22 @@
   width: 79%;
   margin: 0 auto;
   padding: 1px;
-  margin-bottom: 95px;
+  padding-bottom: 95px;
+  text-align: center;
 }
 
 .container_project h2 {
-  display: flex;
-  justify-content: center;
+  font-size: 28px;
+  font-weight: bold;
   text-transform: uppercase;
+  border-bottom: 3px solid #4a0675;
+  display: inline-block;
+  padding-bottom: 5px;
+  margin-bottom: 20px;
+  justify-content: center;
 }
 
 .contenedor {
-  /* border: 1px solid white; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -33,46 +38,33 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: transform 0.3s ease-in-out;
+}
+
+.figure:hover img {
+  transform: scale(1.05);
 }
 
 .capa {
   position: absolute;
-  top: 4px;
-  width: 97%;
-  height: 97%;
-  overflow: hidden;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.7);
   opacity: 0;
-  transition: all 500ms ease-out;
+  visibility: hidden;
+  transition: opacity 0.4s ease-out, transform 0.4s ease-out;
   text-align: center;
   font-size: 20px;
-  transform: translateY(-40px);
-  border-radius: 10px;
+  transform: scale(0.9);
+  border-radius: 3px;
 }
 
-.capa:hover {
-  transform: translateY(0px);
+.figure:hover .capa {
+  transform: scale(1);
   opacity: 1;
-}
-
-.div-icoon1 {
-  margin-top: 60px;
-}
-
-.div-icoon2 {
-  margin-top: 38px;
-}
-.div-icoon3 {
-  margin-top: 62px;
-}
-.div-icoon4 {
-  margin-top: 72px;
-}
-.div-icoon5 {
-  margin-top: 86px;
-}
-.div-icoon6 {
-  margin-top: 80px;
+  visibility: visible;
 }
 
 .icoon_project {
@@ -92,4 +84,27 @@
   color: white;
   padding: 2px;
   text-align: left;
+}
+
+.figure .icoon_project {
+  margin-top: 40px;
+}
+
+.figure:nth-child(1) .icoon_project {
+  margin-top: 60px;
+}
+.figure:nth-child(2) .icoon_project {
+  margin-top: 38px;
+}
+.figure:nth-child(3) .icoon_project {
+  margin-top: 62px;
+}
+.figure:nth-child(4) .icoon_project {
+  margin-top: 72px;
+}
+.figure:nth-child(5) .icoon_project {
+  margin-top: 86px;
+}
+.figure:nth-child(6) .icoon_project {
+  margin-top: 80px;
 }
