--- a/src/components/styles/AboutMe.css
+++ b/src/components/styles/AboutMe.css
@@ -13,13 +13,16 @@ h4 {
   margin: 0 auto;
   width: 76%;
   max-width: 600px;
-  /* border: 1px solid black; */
   padding: 5px;
 }
 
 .container_data h4 {
   padding: 5px;
   color: red;
+}
+
+.paragraphAboutMe {
+  text-align: left;
 }
 
 @media (max-width: 415px) {
