--- a/src/components/styles/TechSkills.css
+++ b/src/components/styles/TechSkills.css
@@ -1,5 +1,5 @@
 .container_tech {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
   text-align: center;
   position: relative;
@@ -42,14 +42,42 @@
   transform: scale(1.2);
 }
 
-/* Ocultar botones de navegación y paginación */
 .swiper-button-prev,
 .swiper-button-next,
 .swiper-pagination {
   display: none !important;
 }
+.container_tech.dark {
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
 
-/* Responsiveness */
+.tech_item.dark {
+  color: #fff;
+}
+
+.tech_item i {
+  font-size: 3rem; 
+  color: #61dafb; 
+}
+
+.container_tech.light {
+  color: #111;
+}
+
+.tech_item.light {
+  color: #000;
+}
+
+.tech_item p {
+  font-size: 1rem;
+  font-weight: 500;
+  text-align: center;
+}
+
 @media (max-width: 768px) {
   .tech_slide i {
     font-size: 60px;
