--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,21 @@
 }
 
 img {
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 100%;
 }
 
 .btn_es {
   border: none;
   cursor: pointer;
+  z-index: 9998;
   transition: background 300ms ease, color 300ms ease;
 }
 
 .btn_en {
   border: none;
   cursor: pointer;
+  z-index: 9998;
   transition: background 300ms ease, color 300ms ease;
 }
 
